test/files/neg/t591.check
t591.scala:38: error: method input_= is defined twice in t591.scala
    def input_=(in : Input) = {}
        ^
one error found
